Redesign for 800x480: compact layout with merged plan/runs table
- Compact header with event name and stats inline
- Smaller progress bar (20px vs 32px)
- Combined weekly table showing plan + actual runs
- Runs marked with ✓, planned with ○
- Much tighter spacing to fit 800x480 e-ink display
- Removed separate runs section

--- a/plugin.html
+++ b/plugin.html
@@ -6,13 +6,12 @@
     <title>Running Dashboard</title>
     <style>
         :root {
-            --spacing-xs: 4px;
-            --spacing-sm: 8px;
-            --spacing-md: 12px;
-            --spacing-lg: 16px;
-            --spacing-xl: 24px;
-            --border-thick: 3px;
-            --border-thin: 2px;
+            --spacing-xs: 3px;
+            --spacing-sm: 6px;
+            --spacing-md: 8px;
+            --spacing-lg: 10px;
+            --border-thick: 2px;
+            --border-thin: 1px;
         }
 
         * {
@@ -26,54 +25,48 @@
             background: #fff;
             color: #000;
             padding: var(--spacing-lg);
-            line-height: 1.3;
+            line-height: 1.2;
+            font-size: 13px;
         }
 
-        /* Header */
+        /* Header - Compact */
         .header {
-            margin-bottom: var(--spacing-xl);
-            padding-bottom: var(--spacing-md);
+            display: grid;
+            grid-template-columns: 2fr 1fr 1fr;
+            gap: var(--spacing-md);
+            margin-bottom: var(--spacing-md);
+            padding-bottom: var(--spacing-sm);
             border-bottom: var(--border-thick) solid #000;
         }
 
         .title {
-            font-size: 28px;
+            font-size: 20px;
             font-weight: 700;
-            margin-bottom: var(--spacing-xs);
-            letter-spacing: -0.5px;
         }
 
-        .subtitle {
-            font-size: 14px;
+        .stat-item {
+            text-align: right;
+        }
+
+        .stat-label {
+            font-size: 10px;
             opacity: 0.6;
+            text-transform: uppercase;
         }
 
-        /* Progress Section */
-        .progress-section {
-            margin-bottom: var(--spacing-xl);
-        }
-
-        .progress-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: baseline;
-            margin-bottom: var(--spacing-sm);
-        }
-
-        .progress-label {
+        .stat-value {
             font-size: 16px;
-            font-weight: 600;
+            font-weight: 700;
         }
 
-        .progress-stats {
-            font-size: 14px;
-            font-weight: 700;
+        /* Progress Bar - Compact */
+        .progress-section {
+            margin-bottom: var(--spacing-md);
         }
 
         .progress-bar-container {
-            width: 100%;
-            height: 32px;
-            border: var(--border-thick) solid #000;
+            height: 20px;
+            border: var(--border-thin) solid #000;
             background: #fff;
             position: relative;
         }
@@ -93,141 +86,77 @@
             align-items: center;
             justify-content: center;
             font-weight: 700;
-            font-size: 14px;
+            font-size: 11px;
             color: #fff;
             mix-blend-mode: difference;
         }
 
-        /* Event Info */
-        .event-section {
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            gap: var(--spacing-md);
-            margin-bottom: var(--spacing-xl);
-        }
-
-        .event-card {
-            border: var(--border-thin) solid #000;
-            padding: var(--spacing-md);
-        }
-
-        .event-label {
-            font-size: 12px;
-            text-transform: uppercase;
-            opacity: 0.6;
-            margin-bottom: var(--spacing-xs);
-            letter-spacing: 0.5px;
-        }
-
-        .event-name {
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 1.2;
-        }
-
-        .event-countdown {
-            font-size: 32px;
-            font-weight: 700;
-            line-height: 1;
-        }
-
-        .event-countdown-label {
-            font-size: 14px;
-            font-weight: 400;
-            opacity: 0.7;
-        }
-
-        /* Runs Table */
-        .runs-section {
-            margin-bottom: var(--spacing-xl);
+        /* Combined Weekly Table */
+        .weekly-section {
+            margin-bottom: var(--spacing-md);
         }
 
         .section-header {
-            font-size: 16px;
-            font-weight: 700;
-            margin-bottom: var(--spacing-md);
-            padding-bottom: var(--spacing-sm);
-            border-bottom: var(--border-thin) solid #000;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .runs-list {
-            border: var(--border-thin) solid #000;
-        }
-
-        .run-item {
-            padding: var(--spacing-sm) var(--spacing-md);
-            border-bottom: 1px solid #ddd;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            gap: var(--spacing-sm);
             font-size: 13px;
-        }
-
-        .run-item:last-child {
-            border-bottom: none;
-        }
-
-        .run-header {
             font-weight: 700;
-            background: #000;
-            color: #fff;
-            border-bottom: var(--border-thin) solid #000;
-        }
-
-        .run-value {
-            font-weight: 600;
-        }
-
-        .run-label {
-            opacity: 0.6;
-            font-size: 11px;
-            display: block;
-        }
-
-        .empty-runs {
-            padding: var(--spacing-xl);
-            text-align: center;
-            opacity: 0.4;
-            font-size: 14px;
-            font-style: italic;
-        }
-
-        /* Weekly Plan */
-        .plan-section {
-            margin-bottom: var(--spacing-xl);
-        }
-
-        .plan-grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: var(--spacing-xs);
-        }
-
-        .plan-day {
-            border: var(--border-thin) solid #000;
-            padding: var(--spacing-sm);
-            text-align: center;
-        }
-
-        .plan-day-name {
-            font-size: 11px;
-            font-weight: 700;
+            margin-bottom: var(--spacing-sm);
             text-transform: uppercase;
-            margin-bottom: var(--spacing-xs);
             letter-spacing: 0.3px;
         }
 
-        .plan-workout {
-            font-size: 10px;
-            line-height: 1.3;
-            opacity: 0.8;
+        .weekly-table {
+            width: 100%;
+            border-collapse: collapse;
+            border: var(--border-thin) solid #000;
+            font-size: 11px;
         }
 
-        /* Quote */
+        .weekly-table th {
+            background: #000;
+            color: #fff;
+            padding: var(--spacing-xs) var(--spacing-sm);
+            text-align: left;
+            font-weight: 600;
+            font-size: 10px;
+        }
+
+        .weekly-table td {
+            padding: var(--spacing-xs) var(--spacing-sm);
+            border-top: var(--border-thin) solid #ddd;
+        }
+
+        .weekly-table tr.plan-row {
+            opacity: 0.7;
+        }
+
+        .weekly-table tr.run-row {
+            font-weight: 600;
+        }
+
+        .day-col {
+            width: 12%;
+            font-weight: 600;
+        }
+
+        .workout-col {
+            width: 38%;
+        }
+
+        .distance-col, .time-col, .pace-col {
+            width: 16%;
+            text-align: right;
+        }
+
+        .icon {
+            display: inline-block;
+            width: 14px;
+            text-align: center;
+            margin-right: 3px;
+        }
+
+        /* Quote - Compact */
         .quote-section {
-            padding: var(--spacing-lg);
+            padding: var(--spacing-sm);
             border: var(--border-thin) solid #000;
             background: #000;
             color: #fff;
@@ -235,94 +164,63 @@
         }
 
         .quote-text {
-            font-size: 14px;
+            font-size: 11px;
             font-style: italic;
-            line-height: 1.5;
+            line-height: 1.3;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <div class="title">🏃 Running Dashboard</div>
-        <div class="subtitle">{{week_label}}</div>
+        <div class="title">🏃 {{event_name}}</div>
+        <div class="stat-item">
+            <div class="stat-label">Countdown</div>
+            <div class="stat-value">{{weeks_until_event}}w</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-label">This Week</div>
+            <div class="stat-value">{{weekly_miles}}/{{target_miles}}mi</div>
+        </div>
     </div>
 
     <div class="progress-section">
-        <div class="progress-header">
-            <div class="progress-label">Weekly Progress</div>
-            <div class="progress-stats">{{weekly_miles}} / {{target_miles}} mi</div>
-        </div>
         <div class="progress-bar-container">
             <div class="progress-bar-fill" style="width: {{progress_percentage}}%"></div>
             <div class="progress-percentage">{{progress_percentage}}%</div>
         </div>
     </div>
 
-    <div class="event-section">
-        <div class="event-card">
-            <div class="event-label">Next Event</div>
-            <div class="event-name">{{event_name}}</div>
-        </div>
-        <div class="event-card">
-            <div class="event-label">Countdown</div>
-            <div class="event-countdown">
-                {{weeks_until_event}}
-                <span class="event-countdown-label">weeks</span>
-            </div>
-        </div>
+    <div class="weekly-section">
+        <div class="section-header">This Week</div>
+        <table class="weekly-table">
+            <thead>
+                <tr>
+                    <th class="day-col">Day</th>
+                    <th class="workout-col">Planned / Actual</th>
+                    <th class="distance-col">Distance</th>
+                    <th class="time-col">Time</th>
+                    <th class="pace-col">Pace</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each weekly_plan}}
+                <tr class="{{#if completed}}run-row{{else}}plan-row{{/if}}">
+                    <td class="day-col">{{day_short}}</td>
+                    <td class="workout-col">
+                        {{#if completed}}
+                        <span class="icon">✓</span>{{workout}}
+                        {{else}}
+                        <span class="icon">○</span>{{workout}}
+                        {{/if}}
+                    </td>
+                    <td class="distance-col">{{#if distance_miles}}{{distance_miles}} mi{{/if}}</td>
+                    <td class="time-col">{{#if duration_minutes}}{{duration_minutes}}m{{/if}}</td>
+                    <td class="pace-col">{{#if pace_per_mile}}{{pace_per_mile}}{{/if}}</td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
     </div>
-
-    <div class="runs-section">
-        <div class="section-header">This Week's Runs</div>
-        {{#if has_runs}}
-        <div class="runs-list">
-            <div class="run-item run-header">
-                <div>Date</div>
-                <div>Distance</div>
-                <div>Time</div>
-                <div>Pace</div>
-            </div>
-            {{#each runs}}
-            <div class="run-item">
-                <div>
-                    <span class="run-label">Date</span>
-                    <span class="run-value">{{date_formatted}}</span>
-                </div>
-                <div>
-                    <span class="run-label">Distance</span>
-                    <span class="run-value">{{distance_miles}} mi</span>
-                </div>
-                <div>
-                    <span class="run-label">Time</span>
-                    <span class="run-value">{{duration_minutes}}m</span>
-                </div>
-                <div>
-                    <span class="run-label">Pace</span>
-                    <span class="run-value">{{pace_per_mile}}</span>
-                </div>
-            </div>
-            {{/each}}
-        </div>
-        {{else}}
-        <div class="runs-list">
-            <div class="empty-runs">No runs logged this week — lace up!</div>
-        </div>
-        {{/if}}
-    </div>
-
-    {{#if has_weekly_plan}}
-    <div class="plan-section">
-        <div class="section-header">This Week's Plan</div>
-        <div class="plan-grid">
-            {{#each weekly_plan}}
-            <div class="plan-day">
-                <div class="plan-day-name">{{day_short}}</div>
-                <div class="plan-workout">{{workout}}</div>
-            </div>
-            {{/each}}
-        </div>
-    </div>
-    {{/if}}
 
     <div class="quote-section">
         <div class="quote-text">"{{quote}}"</div>
