Center align numeric columns and improve progress bar clarity

--- a/plugin.html
+++ b/plugin.html
@@ -145,17 +145,17 @@
 
         .distance-col {
             width: 15%;
-            text-align: right;
+            text-align: center !important;
         }
 
         .time-col {
             width: 14%;
-            text-align: right;
+            text-align: center !important;
         }
 
         .pace-col {
             width: 15%;
-            text-align: right;
+            text-align: center !important;
         }
 
         .icon {
@@ -197,7 +197,7 @@
     <div class="progress-section">
         <div class="progress-bar-container">
             <div class="progress-bar-fill" style="width: {{progress_percentage}}%"></div>
-            <div class="progress-percentage">{{progress_percentage}}%</div>
+            <div class="progress-percentage">TARGET PROGRESS - {{progress_percentage}}%</div>
         </div>
     </div>
 
