--- a/plugin.html
+++ b/plugin.html
@@ -24,7 +24,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             background: #fff;
             color: #000;
-            padding: var(--spacing-lg);
+            padding: var(--spacing-lg) 16px;
             line-height: 1.2;
             font-size: 13px;
         }
