Improve layout: increase padding to prevent cutoff, enlarge table and quote to use vertical space better

--- a/plugin.html
+++ b/plugin.html
@@ -6,10 +6,10 @@
     <title>Running Dashboard</title>
     <style>
         :root {
-            --spacing-xs: 3px;
-            --spacing-sm: 6px;
-            --spacing-md: 8px;
-            --spacing-lg: 10px;
+            --spacing-xs: 4px;
+            --spacing-sm: 8px;
+            --spacing-md: 12px;
+            --spacing-lg: 14px;
             --border-thick: 2px;
             --border-thin: 1px;
         }
@@ -24,7 +24,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             background: #fff;
             color: #000;
-            padding: var(--spacing-lg) 16px;
+            padding: var(--spacing-lg) 24px;
             line-height: 1.2;
             font-size: 13px;
         }
@@ -40,7 +40,7 @@
         }
 
         .title {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 700;
         }
 
@@ -65,7 +65,7 @@
         }
 
         .progress-bar-container {
-            height: 20px;
+            height: 24px;
             border: var(--border-thin) solid #000;
             background: #fff;
             position: relative;
@@ -108,21 +108,21 @@
             width: 100%;
             border-collapse: collapse;
             border: var(--border-thin) solid #000;
-            font-size: 11px;
+            font-size: 13px;
         }
 
         .weekly-table th {
             background: #000;
             color: #fff;
-            padding: var(--spacing-xs) var(--spacing-sm);
+            padding: var(--spacing-sm) var(--spacing-sm);
             text-align: left;
             font-weight: 600;
-            font-size: 10px;
+            font-size: 11px;
             text-transform: uppercase;
         }
 
         .weekly-table td {
-            padding: var(--spacing-xs) var(--spacing-sm);
+            padding: var(--spacing-sm) var(--spacing-sm);
             border-top: var(--border-thin) solid #ddd;
         }
 
@@ -167,7 +167,7 @@
 
         /* Quote - Compact */
         .quote-section {
-            padding: var(--spacing-sm);
+            padding: var(--spacing-md) var(--spacing-sm);
             border: var(--border-thin) solid #000;
             background: #000;
             color: #fff;
@@ -175,9 +175,9 @@
         }
 
         .quote-text {
-            font-size: 11px;
+            font-size: 13px;
             font-style: italic;
-            line-height: 1.3;
+            line-height: 1.4;
         }
     </style>
 </head>
