Remove emoji from title and increase horizontal padding to prevent table/progress bar cutoff

--- a/plugin.html
+++ b/plugin.html
@@ -24,7 +24,7 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             background: #fff;
             color: #000;
-            padding: var(--spacing-lg) 24px;
+            padding: var(--spacing-lg) 32px;
             line-height: 1.2;
             font-size: 13px;
         }
@@ -188,7 +188,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">🏃 {{ event_name }}</div>
+        <div class="title">{{ event_name }}</div>
         <div class="stats-row">
             <div class="stat-item">
                 <div class="stat-label">Countdown</div>
