--- a/plugin.html
+++ b/plugin.html
@@ -24,9 +24,17 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             background: #fff;
             color: #000;
-            padding: var(--spacing-lg) 32px;
+            padding: var(--spacing-lg) 0;
             line-height: 1.2;
             font-size: 13px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 620px;
+            padding: 0 20px;
         }
 
         /* Header - Compact */
@@ -187,6 +195,7 @@
     </style>
 </head>
 <body>
+    <div class="container">
     <div class="header">
         <div class="title">{{ event_name }}</div>
         <div class="stats-row">
@@ -238,6 +247,7 @@
 
     <div class="quote-section">
         <div class="quote-text">"{{ quote }}"</div>
+    </div>
     </div>
 </body>
 </html>
