--- a/plugin.html
+++ b/plugin.html
@@ -33,8 +33,8 @@
 
         .container {
             width: 100%;
-            max-width: 740px;
-            padding: 0 12px;
+            max-width: 850px;
+            padding: 6px 10px;
         }
 
         /* Header - Compact */
