Change weather column header to 'Temp / Rain'

--- a/plugin.html
+++ b/plugin.html
@@ -228,7 +228,7 @@
             <thead>
                 <tr>
                     <th class="day-col">Day</th>
-                    <th class="weather-col">Weather</th>
+                    <th class="weather-col">Temp / Rain</th>
                     <th class="workout-col">Planned</th>
                     <th class="distance-col">Dist</th>
                     <th class="time-col">Time</th>
