Remove personal API endpoint and update README with current JSON structure

--- a/live-test.html
+++ b/live-test.html
@@ -309,7 +309,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://trmnl-running-api-dnd7c0btfygwbmd8.northeurope-01.azurewebsites.net/api/running-data';
+        const API_URL = 'https://your-api-endpoint.com/api/running-data';
         
         const templateSource = `
     <div class="header">
